--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
   "devDependencies": {
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.15",
+    "puppeteer": "^24.16.2",
+    "sharp": "^0.34.3",
     "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "make:og": "node scripts/make-og.js"
   },
   "eslintConfig": {
     "extends": [
