--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-typescript",
   "version": "1.0.0",
   "description": "React and TypeScript example starter project",
+  "type": "module",
   "keywords": [
     "typescript",
     "react",
@@ -27,13 +28,15 @@
   "devDependencies": {
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.15",
-    "typescript": "4.9.5"
+    "ts-node": "^10.9.2",
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dump:cvti": "node --loader ts-node/esm scripts/dump-cvti-map.ts"
   },
   "eslintConfig": {
     "extends": [
