feat: PVTI rollout — rename CVTI→PVTI across UI; remove Result PNG icon; update titles

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "CVTI",
-    "name": "CVTI 테스트",
+    "short_name": "PVTI",
+    "name": "PVTI 테스트",
     "icons": [
       { "src": "favicon.ico", "sizes": "64x64 32x32 24x24 16x16", "type": "image/x-icon" }
     ],
